<resources>
    <string name="app_name">Central</string>
    <string name="Main">Main</string>
    <string name="sections">Sections</string>
    <string name="Add">Add</string>
    <string name="Profile">Profile</string>
    <string name="Setting">Setting</string>
    <string name="Filters">Filters</string>
    <string name="search">Search</string>
    <string name="Delete">Delete</string>
    <string name="Favorite">My Favorite</string>
    <string name="MyAds">My Ads</string>
    <string name="Languge">Languge</string>
    <string name="who">who we are</string>
    <string name="contact">Contact us</string>
    <string name="Carforsale">Cars</string>
    <string name="carcompany">Galleries Car</string>
    <string name="carparts">Spare Parts</string>

    <string name="importcar">Imported Cars</string>
    <string name="carnumber">Car numbers</string>
    <string name="motorcycle">Motorcycles</string>
    <string name="carrent">Cars for Rent</string>
    <string name="changeLang">Change Language</string>

    <string name="cancel">Cencel</string>
    <string name="addedPhoto">Added Pictures</string>

    <string name="EnterEmail">Enter your Email (Optional)</string>
    <string name="EnterSecondPhone">Enter your second phone(Optional)</string>

    <string name="password">Enter Password</string>
    <string name="login">Login</string>

    <string name="SignIn">Sing up</string>
    <string name="EnterPhone">Enter your Phone</string>
    <string name="EnterFullName">Enter your FullName</string>
    <string name="goToSignIn">If you dont have account go to</string>

    <string name="MainInfo">Main Info and Status</string>
    <string name="CarClass">Car Class</string>
    <string name="CarModel">Car Model</string>
    <string name="Year">Year</string>
    <string name="Status">Status</string>
    <string name="Source">Source</string>

    <string name="Engine">Engine</string>
    <string name="CarTransmissionType">Drive System</string>
    <string name="CylinderNo">Cylinder No</string>
    <string name="EngineSize">Engine Size</string>
    <string name="FuelType">Fuel Type</string>
    <string name="PushingSystem">Pushing System</string>

    <string name="Inside">Inside</string>
    <string name="Sealing">Sealing</string>
    <string name="Douchmh">Douchmh</string>
    <string name="WindowsSystem">WindowsSystem</string>
    <string name="SeatsNo">Seats No</string>
    <string name="AirBags">Air Bags</string>
    <string name="Screen">Screen</string>
    <string name="Roof">Roof</string>

    <string name="Outside">Outside</string>
    <string name="Doors">Doors</string>
    <string name="Sensors">Sensors</string>
    <string name="Camera">Camera</string>
    <string name="Lights">Lights</string>
    <string name="Color">Color</string>

    <string name="Details">Details</string>

    <string name="Information">Information</string>
    <string name="Name">Name</string>
    <string name="Phone">Phone</string>
    <string name="Province">Province</string>
    <string name="AdditionDate">Addition Date</string>

    <string name="mainTitle">Main Title</string>
    <string name="price">Price</string>

    <string name="miles">Miles</string>
    <string name="GearNum">Gear Transmmition</string>

    <string name="applay">applay</string>

    <string name="descrption">Descrption</string>
    <string name="MotoreModel">Motore Type</string>
    <string name="location">Location</string>

    <string name="from">from</string>

    <string name="to">to</string>
    <string name="lastSearch">Last Search</string>
    <string name="slogan">Lead you to the Best</string>

    <string name="addInfo">Post Information</string>
    <string name="logInStep">Login Information</string>
    <string name="deletSucc">Delete Succesfully</string>

    <string name="complete">complet all the field to improve your sale chance</string>

    <string name="showYourAdd">Your Post added Succesfully it will be publish soon
    you can see it from MyAdds Section</string>

    <string name="maximum">Muximum Image is 12 image please select less</string>
    <string name="multiple">please select More than one image</string>

    <string name="connectionMessage">there is no internet connection</string>
    <string name="Approved">Approved</string>
    <string name="Pending">Pending</string>
    <string name="EnterPhoneCorrect">Your phone is incorrect</string>
    <string name="Retry">Retry</string>
    <string name="noNet">There is no connection</string>
    <string name="PleaseWait">Please Wait for a second</string>

    <string name="mainImage">Main Image</string>

    <string name="Show">Show</string>

    <string name="logout">Log out</string>
    <string name="doyou">Do you want to logout</string>
    <string name="haveAcount">You do not have account</string>

    <string name="noResult">No Resulte Found</string>
    <string name="sorry">Sorry</string>

    <string name="noAccept">Your Post is not published yet</string>

    <string name="doYou">Do you want to remove this post</string>

    <string name="doYouCall">Do you want to Make a call phone</string>

    <string name="callUs">Call us</string>

    <string name="fillRequier">fill requerd field password and email</string>
    <string name="youHave">you have account now</string>

    <string name="youHaveAlredy">you have already account</string>

    <string name="postAnAdd">Post an Add
        To post your car click on add car, fill all the fields including the price (we advise you to enter the price) and upload multiple images of your car with good lighting and suitable angles for all of the sides of the car without cutting anything and two images for the inside of the car.</string>

<string name="abouteUs">We are an online market for cars that gives you the ability to buy and sell cars by publishing your ad along side with viewing all ads ad cars showrooms offers easily.
    more services are also available such as maintenance centers and car parts stores.</string>

<string name="notAuth">You do not have account</string>

    <string name="problemCon">Problem in connection</string>


    <string name="EnterPassCorrect">Your Password  is not valid</string>

</resources>
