<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

>

    <item android:id="@+id/main_fragment"
      android:icon="@drawable/ic_home_black_24dp"
    android:title="@string/Main"
    >

    </item>
    <item android:id="@+id/sections_fragment_fragment"
          android:icon="@drawable/ic_apps_black_24dp"
          android:title="@string/sections">

    </item>
    <item android:id="@+id/add_fragment"
          android:icon="@drawable/ic_add_black_24dp"
          android:title="@string/Add">

    </item>
    <item android:id="@+id/profile_fragment"
          android:icon="@drawable/ic_person_black_24dp"
          android:title="@string/Profile">

    </item>
    <item android:id="@+id/setting_fragment"
          android:icon="@drawable/ic_settings_black_24dp"
          android:title="@string/Setting">

    </item>
</menu>