<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.setting.Setting_fragment">
<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
android:orientation="vertical">
    <LinearLayout android:layout_width="match_parent" android:layout_height="75dp"
                  android:layout_margin="10dp" android:background="@color/white"
                  android:elevation="5dp" android:gravity="right|center_vertical" android:id="@+id/languagClick">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/Languge" android:layout_marginRight="10dp" android:textSize="20sp"
                  android:fontFamily="@font/font_regular"/>
        <ImageView android:layout_width="30dp" android:layout_height="30dp"
                   android:src="@drawable/ic_language_black_24dp" android:layout_marginRight="10dp"/>

    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="75dp"
                  android:layout_margin="10dp" android:background="@color/white"
                  android:elevation="5dp" android:gravity="right|center_vertical">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/who" android:layout_marginRight="10dp" android:textSize="20sp"
                  android:fontFamily="@font/font_regular"/>
        <ImageView android:layout_width="30dp" android:layout_height="30dp"
                   android:src="@drawable/ic_help_black_24dp" android:layout_marginRight="10dp"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent" android:layout_height="75dp"
                  android:layout_margin="10dp" android:background="@color/white"
                  android:elevation="5dp" android:gravity="right|center_vertical">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/contact" android:layout_marginRight="10dp" android:textSize="20sp"
                  android:fontFamily="@font/font_regular"/>
        <ImageView android:layout_width="30dp" android:layout_height="30dp"
                   android:src="@drawable/ic_email_gray_24dp" android:layout_marginRight="10dp"/>
    </LinearLayout>
</LinearLayout>

</FrameLayout>