<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context=".ui.profile.myFavarote.myFav">


    <androidx.recyclerview.widget.RecyclerView android:layout_width="match_parent"
                                               android:layout_height="match_parent"
                                               android:id="@+id/myFavList"/>

    <LinearLayout android:layout_width="250dp"
                  android:visibility="gone"
                  android:layout_height="250dp"
                  android:id="@+id/noNetContainerMyFav"
                  android:orientation="vertical"
                  android:layout_gravity="center" android:gravity="center">
        <ImageView android:layout_width="100dp" android:layout_height="100dp"
                   android:src="@drawable/no_wifi"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/noNet"
                  android:layout_margin="10dp" android:textSize="18sp" android:fontFamily="@font/font_regular"/>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:text="@string/Retry" android:fontFamily="@font/font_bold"
                android:textColor="@color/white"
                android:id="@+id/retryBtnMyFave"
                android:textSize="20sp" android:gravity="center"
                app:backgroundTint="@color/colorPrimary"
                app:cornerRadius="20dp"
                android:paddingRight="25dp"
                android:paddingLeft="25dp" app:strokeColor="@color/black"
                android:shadowColor="@color/black"

        />
    </LinearLayout>
    <LinearLayout android:layout_width="wrap_content"
                  android:visibility="gone"
                  android:layout_height="wrap_content"
                  android:id="@+id/noResultMyFav"
                  android:orientation="vertical"
                  android:layout_gravity="center" android:gravity="center">
        <ImageView android:layout_width="100dp" android:layout_height="100dp"
                   android:src="@drawable/no_404"/>
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/noResult"
                  android:layout_margin="10dp" android:textSize="18sp" android:fontFamily="@font/font_regular"/>

    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
            android:inputType="textEmailAddress|textNoSuggestions"
            android:visibility="invisible"
            android:id="@+id/animation_loadingMyAdd"
            android:layout_width="234dp"
            android:layout_height="162dp"
            android:layout_gravity="center"
            android:scaleType="centerCrop"
            app:lottie_rawRes="@raw/loading_animation"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"

    />
</FrameLayout>